--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'androidx.core:core-ktx:1.5.0'
+    implementation "androidx.fragment:fragment-ktx:1.4.0-alpha02"
 
     //Firebase, Firestoreの導入
     implementation platform('com.google.firebase:firebase-bom:28.0.1')
